fix: change main css file name

--- a/shelter/assets/styles/global.css
+++ b/shelter/assets/styles/global.css
@@ -32,6 +32,4 @@
   font-weight: normal;
   font-style: italic;
 }
-/*# sourceMappingURL=main.css.map */
-
-
+/*# sourceMappingURL=global.css.map */
