--- a/shelter/assets/styles/global.css
+++ b/shelter/assets/styles/global.css
@@ -32,4 +32,28 @@
   font-weight: normal;
   font-style: italic;
 }
+
+.header__container {
+  
+  display: flex;
+}
+
+.header__logo {
+  
+  display: flex;
+
+          flex-direction: column;
+}
+
+.menu__list {
+
+  display: flex;
+}
 /*# sourceMappingURL=global.css.map */
+
+
+.wrapper {
+  max-width: 1200px;
+  margin: 0 auto;
+  background-color: red;
+}
