--- a/shelter/assets/styles/normalize.css
+++ b/shelter/assets/styles/normalize.css
@@ -75,6 +75,7 @@ pre {
 
 a {
   background-color: transparent;
+  text-decoration: none;
 }
 
 /**
@@ -346,4 +347,11 @@ template {
 
 [hidden] {
   display: none;
+}
+
+
+* {
+	padding: 0px;
+	margin: 0px;
+	border: 0px;
 }
