--- a/shelter/pages/main/style.scss
+++ b/shelter/pages/main/style.scss
@@ -13,19 +13,17 @@ html {
 }
 
 body {
-  
 }
 
 .wrapper {
   display: flex;
   flex-direction: column;
   // padding: 0 40px;
-  
 }
 
 .container {
   width: 1200px;
-  
+
   margin: 0 auto;
   padding: 0 40px;
 }
@@ -37,7 +35,7 @@ body {
 .header {
   background: linear-gradient(to right, #5b483a, #262425);
   // margin: 60px 0;
- 
+
   &__container {
     display: flex;
     justify-content: space-between;
@@ -95,6 +93,7 @@ body {
   &__list {
     display: flex;
     justify-content: space-between;
+    align-items: center;
     list-style: none;
     // *:first-child {
 
@@ -134,31 +133,24 @@ body {
 .main-of-main-page {
 }
 
-
 @mixin flexColumn() {
   display: flex;
   flex-direction: column;
 }
 
-
- 
 .start-screen {
-
   background: linear-gradient(to right, #5b483a, #262425);
-		// .start-screen__container
-	&__container {
-      // margin-top: 60px;
+  // .start-screen__container
+  &__container {
   }
 
-
-
-  
   // .start-screen__content
   &__content {
     @include flexColumn();
     // width: 460/1200 * 100%;
     flex: 1 0 (460/1200) * 100%;
     margin-right: 42px;
+    margin-bottom: 243px;
   }
   // .start-screen__title
   &__title {
@@ -179,7 +171,6 @@ body {
   }
   // .start-screen__description
   &__description {
-    
     margin-top: 42px;
     font-family: "Arial";
     font-style: normal;
@@ -201,15 +192,12 @@ body {
   }
   // .start-screen__img
   &__img {
-    
     flex: 0 1 (698/1200) * 100%;
-    width: (728/698) * 100%;
-    & img {
-      
-      width: 100%;
+    // height: (728/1200) * 100%;
 
-      object-fit: cover;
-    }
+    height: 100%;
+
+    object-fit: cover;
   }
 }
 
@@ -218,5 +206,49 @@ body {
   justify-content: space-between;
 }
 
-
-
+.about-the-shelter {
+  // .about-the-shelter__two-columns
+  &__two-columns {
+    display: flex;
+    justify-content: center;
+    gap: 120px;
+    padding: 80px 0 100px 0;
+  }
+  // .about-the-shelter__img
+  &__img {
+  }
+  // .about-the-shelter__content
+  &__content {
+    @include flexColumn();
+    padding: 14px 0;
+    width: (430/1200) * 100%;
+    
+  }
+  // .about-the-shelter__title
+  &__title {
+    margin-bottom: 25px;
+    font-family: "Georgia";
+    font-style: normal;
+    font-weight: 400;
+    font-size: 35px;
+    line-height: 130%;
+    display: flex;
+    align-items: center;
+    letter-spacing: 0.06em; 
+    color: #545454;
+  }
+  // .about-the-shelter__description
+  &__description {
+    p {
+      font-family: "Arial";
+      font-style: normal;
+      font-weight: 400;
+      font-size: 15px;
+      line-height: 160%;    
+      color: #4c4c4c;          
+    }
+    p:not(:last-child) {
+      margin-bottom: 25px;
+    }
+  }
+}
