feat stylize pets and help sections

--- a/shelter/assets/styles/forms.scss
+++ b/shelter/assets/styles/forms.scss
@@ -20,3 +20,8 @@
   background-color: #F1CDB3;
   transition: background-color 0.3s ease 0s;
 }
+
+.btn_transparent {
+  background-color: #FAFAFA;
+  border: 3px solid #F1CDB3;
+}
