--- a/shelter/assets/styles/forms.css
+++ b/shelter/assets/styles/forms.css
@@ -26,4 +26,9 @@
   -webkit-transition: background-color 0.3s ease 0s;
   transition: background-color 0.3s ease 0s;
 }
+
+.btn_transparent {
+  background-color: #FAFAFA;
+  border: 3px solid #F1CDB3;
+}
 /*# sourceMappingURL=forms.css.map */
