feat: stylize donation

--- a/shelter/pages/main/style.scss
+++ b/shelter/pages/main/style.scss
@@ -368,8 +368,6 @@ body {
 .help {
   // .help__title
 
-  
-
   &__title {
     width: (320/1200) * 100%;
     margin: 0 auto;
@@ -386,6 +384,7 @@ body {
     column-gap: 120px;
     row-gap: 55px;
     flex-wrap: wrap;
+    margin-bottom: 100px;
     // padding: 0 87px;
     // padding-left: 50px;
   }
@@ -395,13 +394,10 @@ body {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-   
   }
 
- 
   // .help__img
   &__img {
-    
     margin-bottom: 30px;
   }
   // .help__description
@@ -423,5 +419,89 @@ body {
     color: #545454;
   }
 }
-.container {
+
+.donation {
+  background-color: #f6f6f6;
+  // .donation__container
+  &__container {
+  }
+  // .donation__two-columns
+  &__two-columns {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    column-gap: 30px;
+    padding: 80px 0 95px 0;
+  }
+  // .donation__img
+  &__img {
+    // padding: 0px 0 11px 0;
+    max-width: (505/1200) * 100%;
+  }
+  // .donation__content
+  &__content {
+    max-width: (380/1200) * 100%;
+  }
+  // .donation__title
+  &__title {
+    text-align: left;
+    margin-bottom: 20px;
+  }
+  // .donation__name-of-bank
+  &__name-of-bank {
+    font-family: "Georgia";
+    font-style: normal;
+    font-weight: 400;
+    font-size: 15px;
+    line-height: 110%;
+    /* identical to box height, or 17px */
+
+    display: flex;
+    align-items: center;
+    letter-spacing: 0.06em;
+
+    /* color-dark-l */
+
+    color: #545454;
+    margin-bottom: 15px;
+  }
+  // .donation__card-number
+  &__card-number {
+    font-family: "Georgia";
+    font-style: normal;
+    font-weight: 400;
+    font-size: 20px;
+    line-height: 115%;
+    /* identical to box height, or 23px */
+
+    display: flex;
+    align-items: center;
+    letter-spacing: 0.06em;
+
+    /* color-dark-l */
+
+    color: #545454;
+    margin-bottom: 15px;
+    background: #f1cdb3;
+    border-radius: 9px;
+    padding: 10px 15px;
+    margin-right: 31px;
+  }
+  // .donation__description
+  &__description {
+    font-family: "Arial";
+    font-style: italic;
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 18px;
+    /* or 150% */
+
+    display: flex;
+    align-items: center;
+
+    /* color-dark-m */
+
+    color: #b2b2b2;
+    margin-bottom: 20px;
+  }
 }
