--- a/shelter/pages/main/style.css
+++ b/shelter/pages/main/style.css
@@ -491,6 +491,7 @@ html {
   row-gap: 55px;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
+  margin-bottom: 100px;
 }
 
 .help__item {
@@ -530,5 +531,97 @@ html {
   letter-spacing: 0.06em;
   /* color-dark-l */
   color: #545454;
+}
+
+.donation {
+  background-color: #f6f6f6;
+}
+
+.donation__two-columns {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-column-gap: 30px;
+          column-gap: 30px;
+  padding: 80px 0 95px 0;
+}
+
+.donation__img {
+  max-width: 42.08333%;
+}
+
+.donation__content {
+  max-width: 31.66667%;
+}
+
+.donation__title {
+  text-align: left;
+  margin-bottom: 20px;
+}
+
+.donation__name-of-bank {
+  font-family: "Georgia";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 15px;
+  line-height: 110%;
+  /* identical to box height, or 17px */
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  letter-spacing: 0.06em;
+  /* color-dark-l */
+  color: #545454;
+  margin-bottom: 15px;
+}
+
+.donation__card-number {
+  font-family: "Georgia";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 115%;
+  /* identical to box height, or 23px */
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  letter-spacing: 0.06em;
+  /* color-dark-l */
+  color: #545454;
+  margin-bottom: 15px;
+  background: #f1cdb3;
+  border-radius: 9px;
+  padding: 10px 15px;
+  margin-right: 31px;
+}
+
+.donation__description {
+  font-family: "Arial";
+  font-style: italic;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 18px;
+  /* or 150% */
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  /* color-dark-m */
+  color: #b2b2b2;
+  margin-bottom: 20px;
 }
 /*# sourceMappingURL=style.css.map */
