--- a/shelter/pages/main/style.css
+++ b/shelter/pages/main/style.css
@@ -549,7 +549,7 @@ html {
           align-items: center;
   -webkit-column-gap: 30px;
           column-gap: 30px;
-  padding: 80px 0 95px 0;
+  padding: 80px 0 90px 0;
 }
 
 .donation__img {
@@ -585,6 +585,7 @@ html {
 }
 
 .donation__card-number {
+  position: relative;
   font-family: "Georgia";
   font-style: normal;
   font-weight: 400;
@@ -623,5 +624,75 @@ html {
   /* color-dark-m */
   color: #b2b2b2;
   margin-bottom: 20px;
+}
+
+.footer {
+  background: -webkit-gradient(linear, left top, right top, from(#5b483a), to(#262425));
+  background: linear-gradient(to right, #5b483a, #262425);
+}
+
+.footer__three-columns {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin-top: 40px;
+}
+
+.footer__column-title {
+  margin-bottom: 40px;
+  font-family: "Georgia";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 35px;
+  line-height: 130%;
+  /* or 45px */
+  letter-spacing: 0.06em;
+  /* color-light-xl */
+  color: #ffffff;
+}
+
+.footer__first-column-item {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin-bottom: 44px;
+  font-family: "Georgia";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 115%;
+  /* identical to box height, or 23px */
+  letter-spacing: 0.06em;
+  /* color-primary */
+  color: #f1cdb3;
+}
+
+.footer__second-column-item {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  position: relative;
+  font-family: "Georgia";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 115%;
+  /* identical to box height, or 23px */
+  letter-spacing: 0.06em;
+  /* color-primary */
+  color: #f1cdb3;
+  margin-bottom: 60px;
 }
 /*# sourceMappingURL=style.css.map */
