--- a/shelter/pages/main/style.scss
+++ b/shelter/pages/main/style.scss
@@ -431,7 +431,7 @@ body {
     justify-content: center;
     align-items: center;
     column-gap: 30px;
-    padding: 80px 0 95px 0;
+    padding: 80px 0 90px 0;
   }
   // .donation__img
   &__img {
@@ -467,6 +467,7 @@ body {
   }
   // .donation__card-number
   &__card-number {
+    position: relative;
     font-family: "Georgia";
     font-style: normal;
     font-weight: 400;
@@ -504,4 +505,80 @@ body {
     color: #b2b2b2;
     margin-bottom: 20px;
   }
+}
+
+.footer {
+  background: linear-gradient(to right, #5b483a, #262425);
+  // .footer__container
+  &__container {
+  }
+  // .footer__three-columns
+  &__three-columns {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-top: 40px;
+    
+  }
+  // .footer__column
+  &__column {
+  }
+  // .footer__column-title
+  &__column-title {
+    // margin-top: 16px;
+    margin-bottom: 40px;
+    font-family: "Georgia";
+    font-style: normal;
+    font-weight: 400;
+    font-size: 35px;
+    line-height: 130%;
+    /* or 45px */
+
+    letter-spacing: 0.06em;
+
+    /* color-light-xl */
+
+    color: #ffffff;
+  }
+  // .footer__first-column-item
+  &__first-column-item {
+    display: flex;
+    align-items: center;
+    
+    margin-bottom: 44px;
+   
+    font-family: "Georgia";
+    font-style: normal;
+    font-weight: 400;
+    font-size: 20px;
+    line-height: 115%;
+    /* identical to box height, or 23px */
+
+    letter-spacing: 0.06em;
+
+    /* color-primary */
+
+    color: #f1cdb3;
+  }
+  // .footer__second-column-item
+  &__second-column-item {
+    display: flex;
+    align-items: center;
+    position: relative;
+    font-family: "Georgia";
+    font-style: normal;
+    font-weight: 400;
+    font-size: 20px;
+    line-height: 115%;
+    /* identical to box height, or 23px */
+
+    letter-spacing: 0.06em;
+
+    /* color-primary */
+
+    color: #f1cdb3;
+    margin-bottom: 60px;
+  }
+}
+.container {
 }
