--- a/shelter/assets/styles/forms.scss
+++ b/shelter/assets/styles/forms.scss
@@ -14,14 +14,55 @@
   font-style: normal;
   font-weight: 400;
   font-size: 17px;
-  line-height: 130%;  
+  line-height: 130%;
   letter-spacing: 0.06em;
   color: #292929;
-  background-color: #F1CDB3;
+  background-color: #f1cdb3;
   transition: background-color 0.3s ease 0s;
 }
 
 .btn_transparent {
-  background-color: #FAFAFA;
-  border: 3px solid #F1CDB3;
+  background-color: #fafafa;
+  border: 2px solid #f1cdb3;
 }
+
+.round-button {
+  width: 52px;
+  height: 52px;
+  border: 2px solid #f1cdb3;
+  box-sizing: border-box;
+  border-radius: 100px;
+  font-family: "Georgia";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 115%;
+  /* identical to box height, or 23px */
+  
+  
+  // text-align: center;
+  letter-spacing: 0.06em;
+ 
+    text-align: center;
+    color:  #292929;
+
+  &_disabled {
+    color: #cdcdcd;
+    border: 2px solid #cdcdcd;
+   
+      color: #cdcdcd;      
+    
+  }
+  &:hover {
+    cursor: pointer;
+    background-color: #F1CDB3;
+  }
+  &_static {
+    background-color: #F1CDB3;
+  }
+ 
+}
+
+
+
+
