--- a/shelter/pages/pets/style.css
+++ b/shelter/pages/pets/style.css
@@ -57,14 +57,47 @@
   line-height: 130%;
   letter-spacing: 0.06em;
   color: #292929;
-  background-color: #F1CDB3;
+  background-color: #f1cdb3;
   -webkit-transition: background-color 0.3s ease 0s;
   transition: background-color 0.3s ease 0s;
 }
 
 .btn_transparent {
-  background-color: #FAFAFA;
-  border: 3px solid #F1CDB3;
+  background-color: #fafafa;
+  border: 2px solid #f1cdb3;
+}
+
+.round-button {
+  width: 52px;
+  height: 52px;
+  border: 2px solid #f1cdb3;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  border-radius: 100px;
+  font-family: "Georgia";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 115%;
+  /* identical to box height, or 23px */
+  letter-spacing: 0.06em;
+  text-align: center;
+  color: #292929;
+}
+
+.round-button_disabled {
+  color: #cdcdcd;
+  border: 2px solid #cdcdcd;
+  color: #cdcdcd;
+}
+
+.round-button:hover {
+  cursor: pointer;
+  background-color: #F1CDB3;
+}
+
+.round-button_static {
+  background-color: #F1CDB3;
 }
 
 html {
@@ -302,5 +335,112 @@ html {
   letter-spacing: 0.06em;
   /* color-primary */
   color: #f1cdb3;
+}
+
+.our-pets {
+  background-color: #f6f6f6;
+}
+
+.our-pets__container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding: 80px 0 100px 0;
+}
+
+.our-pets__title {
+  max-width: 33.33333%;
+  margin: 0 auto 45px auto;
+  font-family: "Georgia";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 35px;
+  line-height: 130%;
+  /* or 45px */
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  text-align: center;
+  letter-spacing: 0.06em;
+  /* color-dark-l */
+  color: #545454;
+}
+
+.our-pets__items {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  gap: 27px 30px;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  padding: 15px 0;
+  margin-bottom: 45px;
+}
+
+.our-pets__item {
+  max-width: 22.5%;
+  background-color: #FAFAFA;
+  -webkit-transition: all 0.3s ease 0s;
+  transition: all 0.3s ease 0s;
+}
+
+.our-pets__item:hover {
+  cursor: pointer;
+  background-color: #ffffff;
+}
+
+.our-pets__item:hover .our-pets__button a {
+  background-color: #F1CDB3;
+}
+
+.our-pets__img img {
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
+.our-pets__name {
+  font-family: "Georgia";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 23px;
+  /* identical to box height */
+  text-align: center;
+  margin: 25px 0 30px 0;
+  letter-spacing: 0.06em;
+  /* color-dark-l */
+  color: #545454;
+}
+
+.our-pets__button {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  margin-bottom: 30px;
+}
+
+.our-pets__navigation {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  gap: 20px;
 }
 /*# sourceMappingURL=style.css.map */
