--- a/shelter/pages/pets/style.scss
+++ b/shelter/pages/pets/style.scss
@@ -33,7 +33,6 @@ body {
 }
 
 .header {
-  
   // margin: 60px 0;
 
   &__container {
@@ -127,11 +126,10 @@ body {
     color: #545454;
     transition: all 0.3s ease 0s;
     &:hover {
-      cursor:pointer;
+      cursor: pointer;
     }
   }
 }
-
 
 .footer {
   background: linear-gradient(to right, #5b483a, #262425);
@@ -144,7 +142,6 @@ body {
     justify-content: space-between;
     align-items: center;
     margin-top: 40px;
-    
   }
   // .footer__column
   &__column {
@@ -171,9 +168,9 @@ body {
     display: block;
     display: flex;
     align-items: center;
-    
+
     margin-bottom: 44px;
-   
+
     font-family: "Georgia";
     font-style: normal;
     font-weight: 400;
@@ -193,11 +190,11 @@ body {
       font-size: 20px;
       line-height: 115%;
       /* identical to box height, or 23px */
-  
+
       letter-spacing: 0.06em;
-  
+
       /* color-primary */
-  
+
       color: #f1cdb3;
     }
   }
@@ -227,51 +224,114 @@ body {
       font-size: 20px;
       line-height: 115%;
       /* identical to box height, or 23px */
-  
+
       letter-spacing: 0.06em;
-  
+
       /* color-primary */
-  
+
       color: #f1cdb3;
     }
   }
 }
 
+.our-pets {
+  background-color: #f6f6f6;
+  // .our-pets__container
+  &__container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 80px 0 100px 0;
+  }
+  // .our-pets__title
+  &__title {
+    max-width: (400/1200) * 100%;
+    margin: 0 auto 45px auto;
 
-// .pets {
-//   // .pets__container
-//   &__container {
-//     display: flex;
-//     flex-wrap: wrap;
-//   }
-//   // .pets__title
-//   &__title {}
-//   // .pets__list
-//   &__list {}
-//   // .pets__item
-//   &__item {
-//     flex: 1 1 33.333%;
-//   }
-//   // .pets__img
-//   &__img {}
-//   // .pets__name
-//   &__name {}
-//   // .pets__button
-//   &__button {}
-// }
-// .container {
-// }
-// .btn {
-//   // .btn_transparent
-//   &_transparent {}
-// }
-// .our-pets {
-//   // .our-pets__nav
-//   &__nav {}
-// }
+    font-family: "Georgia";
+    font-style: normal;
+    font-weight: 400;
+    font-size: 35px;
+    line-height: 130%;
+    /* or 45px */
 
+    display: flex;
+    align-items: center;
+    text-align: center;
+    letter-spacing: 0.06em;
 
+    /* color-dark-l */
 
-  
+    color: #545454;
+  }
+  // .our-pets__items
+  &__items {
+    display: flex;
+    justify-content: space-between;
+    gap: 27px 30px;
+    flex-wrap: wrap;
+    padding: 15px 0;
+    margin-bottom: 45px;
+  }
+  // .our-pets__item
+  &__item {
+    max-width: (270/1200) * 100%;
+    background-color: #FAFAFA;
+    transition: all 0.3s ease 0s;    
+    &:hover {
+      cursor: pointer;
+      background-color: #ffffff;
+      .our-pets__button a {
+        background-color: #F1CDB3;
+      }
+    }
+  }
+  // .our-pets__img
+  &__img {
+    img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+    }
+  }
 
- 
+  &__name {
+    
+    font-family: "Georgia";
+    font-style: normal;
+    font-weight: 400;
+    font-size: 20px;
+    line-height: 23px;
+    /* identical to box height */
+
+    text-align: center;
+    margin: 25px 0 30px 0;
+    letter-spacing: 0.06em;
+
+    /* color-dark-l */
+
+    color: #545454;
+  }
+  // .our-pets__button
+  &__button {
+    display: flex;
+    justify-content: center;
+    margin-bottom: 30px;
+  }
+  // .our-pets__navigation
+  &__navigation {
+    display: flex;
+    gap: 20px;
+  }
+}
+.container {
+}
+.btn {
+  // .btn_transparent
+  &_transparent {
+  }
+}
+.round-button {
+}
+.static {
+}
